sorted/tests/04-variants-with-data.stderr
error: Dyn should sort before Fmt
   |
19 |     Dyn(Box<dyn StdError>),
   |     ^^^
